# notes-management-api

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth_routes.py  crud_routes.py  deps.py
app/core/: config.py  security.py
app/database/: connection.py  models.py
app/schemas/: crud_schemas.py  user_schemas.py
app/services/: auth_service.py  crud_service.py
app/utils/: exceptions.py  responses.py  utils.py
